--- a/nodeJS/views/home.handlebars
+++ b/nodeJS/views/home.handlebars
@@ -1,1 +1,10 @@
 <h1>lista de posts: </h1>
+
+{{#each posts}}
+    <small>{{createdAt}}</small>
+    <h1>{{titulo}}</h1>
+    <p>{{conteudo}}</p>
+    <hr>
+{{/each}}
+
+<a href="/cadastro">Ir para formulário</a>
